bug: navbar padding on left too high

--- a/index.scss
+++ b/index.scss
@@ -10,8 +10,8 @@
 $shadows-small: multiple-box-shadow(700);
 $shadows-medium: multiple-box-shadow(200);
 $shadows-big: multiple-box-shadow(100);
-$transparent-white: rgba(255,255,255, 0.85);
-$transparent-black: rgba(0,0,0, 0.85);
+$transparent-white: rgba(255,255,255, 0.95);
+$transparent-black: rgba(0,0,0, 0.95);
 
 html,body {
   scroll-behavior: smooth;
@@ -92,11 +92,12 @@ nav{
   top: 0;
   left: 0;
   width: 100%;
-  padding-left: 5rem;
+  padding-left: 1vw;
+  font-size: 1rem;
   @media (max-width: 400px) {
-    font-size: 0.75em;
-    font-weight: 400;
-    padding-left: 1rem;
+    font-size: 0.85rem;
+    font-weight: 600;
+    padding-left: 0.5vw;
   }
   ul{
     display: flex;
